// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gitt at Label skal vises Når label skal mountes på siden Så vises den riktig med  default styling 1`] = `
<div
  class=""
>
  <label
    class="label"
  >
    my label
  </label>
</div>
`;

exports[`Gitt at Label skal vises Når label skal mountes på siden Så vises den riktig med custom className prop 1`] = `
<div
  class="test-css"
>
  <label
    class="label"
  >
    my label
  </label>
</div>
`;

exports[`Gitt at Label skal vises Når label skal mountes på siden Så vises den riktig med custom className prop og sublabel 1`] = `
<div
  class="test-css"
>
  <label
    class="label"
  >
    my label
    <span
      class="label__sublabel"
    >
      my sublabel
    </span>
  </label>
</div>
`;
